# gsoa

./: CMakeLists.txt  README.md  clean-cmake_build.sh  install-cmake_build.sh
Mk/: comrob.mk  libs.mk
cmake/: FindCairo.cmake  FindLog4cxx.cmake
crl/: CMakeLists.txt  README.md  clean-cmake_build.sh  clean.sh  install-cmake_build.sh  install.sh
crl.algorithm/src/: algorithm.cc  text_result_log.cc
crl.gui/: clean.sh  install.sh
crl.gui/src/: cairowin_offscreen.cc  cairowin_offscreen.h  cairoxrender.cc  cairoxwin.cc  cairoxwin.h  canvas.cc  canvas.h  canvas_object_saver.h  canvascontainer.cc  colormap.h  colors.h  guievent.h  guifactory.cc  guifactory.h  guihandler.h  manager.h  mouseclick.cc  renderer.h  renderer_object.cc  renderer_object.h  renderercairo.cc  renderercairo.h  shapes.h  view_transform.h  waitforclick.cc  win_adjust_size.h  xcolors.cc
crl.loader/src/: loader_module.h  loader_types.h  map_partition_module.cc  map_partition_module.h  route_module.cc  route_module.h  text_format_loader.cc  text_format_loader.h  text_stream.h
crl.tsplib/: CMakeLists.txt
crl.tsplib/src/: loadertour.cc  loadertour.h  loadertsp.h  tspdatatsp.h  tsplib.cc  tsplib.h  tsplibdata.h  tsplibloader.h  tspproblemloader.h
crl/Mk/: comrob.mk
crl/cmake/: FindCairo.cmake  FindCairo.cmake.old
crl/crl/: CMakeLists.txt  Makefile  install.sh
crl/crl.algorithm/: CMakeLists.txt  Makefile  clean.sh
crl/crl.algorithm/src/: algorithm.h  algorithm_base.cc  algorithm_base.h  result_log.cc  result_log.h  text_result_log.h
crl/crl.gui/: CMakeLists.txt  Makefile
crl/crl.gui/src/: cairogui.cc  cairogui.h  cairowin.cc  cairowin.h  cairoxrender.h  cairoxwinsimple.cc  cairoxwinsimple.h  canvas.h  canvas_object_loader.cc  canvas_object_loader.h  canvas_object_saver.cc  canvascontainer.h  colormap.cc  colors.cc  gui.h  guievent.cc  guihandler.cc  guilistener.h  manager.cc  manager.h  markers.cc  markers.h  mouseclick.h  shape.cc  shape.h  shapes.cc  view_transform.cc  waitforclick.h  win_adjust_size.cc
crl/crl.loader/: CMakeLists.txt  Makefile  install.sh
crl/crl.loader/src/: distances_module.cc  distances_module.h  graph_module.cc  graph_module.h  loader_types.cc  nodeloader.h  text_stream.cc
crl/crl.tsplib/: CMakeLists.txt  Makefile
crl/crl.tsplib/src/: loadertsp.cc  tloader.cc  tsplibloader.cc  tsplibspec.cc  tsplibspec.h  tsplibtypes.h  tspnode.h  tsptour.h
crl/crl/src/: bbox.cc  config.h  dijkstra_lite.h  eventqueue.h  file_utils.cc  proc_signal.h  random.h  string_utils.h  stringconversions.h  threadwrapper.h  timerN.h  ws.cc
crl/src/: assert.h  bbox.h  boost_args_config.h  dijkstra_heap.h  dijkstra_lite.h  exceptions.h  file_utils.h  logging.cc  logging.h  matrix_utils.h  param_saver.h  perf_timer.h  proc_signal.cc  random.cc  thread.cc  thread.h  timerN.cc  waitobject.cc  waitobject.h  ws.h
gsoa-cetsp/: CMakeLists.txt  tgsoa-cetsp.cfg
gsoa-cetsp/etc/cetsp-2d-arbitrary_radius_problems/: bonus1000rdmRad.cetsp  d493rdmRad.cetsp  dsj1000rdmRad.cetsp  kroD100rdmRad.cetsp  lin318rdmRad.cetsp  pcb442rdmRad.cetsp  rat195rdmRad.cetsp  rd400rdmRad.cetsp  team1_100rdmRad.cetsp  team2_200rdmRad.cetsp  team3_300rdmRad.cetsp  team4_400rdmRad.cetsp  team5_499rdmRad.cetsp  team6_500rdmRad.cetsp
gsoa-cetsp/etc/cetsp-2d-cities/: bonus1000.cetsp  bubbles1.cetsp  bubbles2.cetsp  bubbles3.cetsp  bubbles4.cetsp  bubbles5.cetsp  bubbles6.cetsp  bubbles7.cetsp  bubbles8.cetsp  bubbles9.cetsp  chaoSingleDep.cetsp  concentricCircles1.cetsp  concentricCircles2.cetsp  concentricCircles3.cetsp  concentricCircles4.cetsp  concentricCircles5.cetsp  d493.cetsp  dsj1000.cetsp  kroD100.cetsp  lin318.cetsp  pcb442.cetsp  rat195.cetsp  rd400.cetsp  rotatingDiamonds1.cetsp  rotatingDiamonds2.cetsp  rotatingDiamonds3.cetsp  rotatingDiamonds4.cetsp  rotatingDiamonds5.cetsp  team1_100.cetsp  team2_200.cetsp  team3_300.cetsp  team4_400.cetsp  team5_499.cetsp  team6_500.cetsp
gsoa-cetsp/etc/cetsp-2d-cities_radius/: bonus1000.cetsp  bubbles1.cetsp  bubbles2.cetsp  bubbles3.cetsp  bubbles4.cetsp  bubbles5.cetsp  bubbles6.cetsp  bubbles7.cetsp  bubbles8.cetsp  bubbles9.cetsp  chaoSingleDep.cetsp  concentricCircles1.cetsp  concentricCircles2.cetsp  concentricCircles3.cetsp  concentricCircles4.cetsp  concentricCircles5.cetsp  rotatingDiamonds1.cetsp  rotatingDiamonds2.cetsp  rotatingDiamonds3.cetsp  rotatingDiamonds4.cetsp  rotatingDiamonds5.cetsp  team1_100.cetsp  team2_200.cetsp  team3_300.cetsp  team4_400.cetsp  team5_499.cetsp  team6_500.cetsp
gsoa-cetsp/src/: Makefile  coords.cc  gsoa.cc  gsoa.h  gsoa_learning.cc  gsoa_learning.h  gsoa_ring.cc  gsoa_ring.h  route_path_utils.cc  route_path_utils.h  simple_intersection.h  target.h  tgsoa-cetsp.cc
gsoa-cetsp/src/Mk/: comrob.mk
gsoa-etsp/: CMakeLists.txt  tgsoa-etsp.cfg
gsoa-etsp/etc/tsp/: berlin52-cities.txt  bier127-cities.txt  ch130-cities.txt  eil101-cities.txt  fnl4461-cities.txt  gil262-cities.txt  kroB200-cities.txt  lin105-cities.txt  lin318-cities.txt  lu980-cities.txt  rat195-cities.txt  rat575-cities.txt  rat783-cities.txt  rd100-cities.txt  rd400-cities.txt  rw1621-cities.txt  u574-cities.txt  uy734-cities.txt  zi929-cities.txt
gsoa-etsp/src/: Makefile  canvasview_coords.h  canvasview_gsoa.h  coords.h  gsoa.cc  gsoa.h  gsoa_learning.cc  gsoa_learning.h  gsoa_neuron.h  gsoa_ring.cc  gsoa_ring.h  route_path_utils.cc  target.h  tgsoa-etsp.cc
gsoa-etsp/src/Mk/: libs.mk
